--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="developer" content="Azeez Hamzat">
-    <title>Azeez Adewale Hamzat | Blog</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="developer" content="Azeez Hamzat">
+        <meta name="description" content="Azeez Adewale Hamzat - Researcher and innovator in Collective Intelligence and sustainability for Africa.">
+        <meta name="keywords" content="Collective Intelligence, Collective Genius, Sustainability, Agroecology, Africa, Futures thinker">
+        <title>Azeez Adewale Hamzat | Blog</title>
+        <link rel="icon" href="images/favicon.png" type="image/png">
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-lightbox/2.14.3/simple-lightbox.min.css" integrity="sha512-3vOhFXEFRKDec0zTkqJ7FcN7F1PT3T5H8S5P0fL8L+CHbf4Q2jdLFulwnXFSzSZmQ9jZhaIirWpkQ8tTLgXuH8Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    </head>
 <body>
     <!-- Header -->
     <header>
@@ -18,10 +21,12 @@
                 <a href="index.html">Azeez Adewale Hamzat</a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#visualizations">Insights</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#ci-projects">Projects</a></li>
+                <li><a href="index.html#achievements">Achievements</a></li>
+                <li><a href="blog.html" class="active">Blog</a></li>
+                <!-- <li><a href="index.html#achievements">Achievements</a></li> -->
+                <!-- <li><a href="index.html#certificates">Certificates</a></li> -->
                 <li><a href="index.html#contact">Contact</a></li>
             </ul>
             <div class="menu-toggle" aria-label="Toggle navigation menu"><i class="fas fa-bars"></i></div>
@@ -43,13 +48,13 @@
                     <label for="filter-tags">Filter by Tag</label>
                     <select id="filter-tags" onchange="filterPosts()">
                         <option value="">All Tags</option>
-                        <option value="Agriculture">Agriculture</option>
+                        <option value="EvidenceBasedManagement">EvidenceBasedManagement </option>
                         <option value="Community">Community</option>
-                        <option value="Education">Education</option>
-                        <option value="Environment">Environment</option>
-                        <option value="Energy">Energy</option>
-                        <option value="Entrepreneurship">Entrepreneurship</option>
-                        <option value="Health">Health</option>
+                        <option value="Diversity">Diversity</option>
+                        <option value="OrganizationalChange">OrganizationalChange</option>
+                        <option value="GroupDynamics">GroupDynamics </option>
+                        <option value="Futures">Futures</option>
+                        <option value="Systems">Systems</option>
                         <option value="Research">Research</option>
                     </select>
                 </div>
