--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             <h2>Certificates & Specializations</h2>
             <div class="filters">
                 <button class="filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn" data-filter="specialization">Specializations</button>
                 <button class="filter-btn" data-filter="ci">Collective Intelligence</button>
                 <button class="filter-btn" data-filter="foresight">Foresight/Futures Thinking</button>
                 <button class="filter-btn" data-filter="ehs">EHS</button>
