--- a/index.html
+++ b/index.html
@@ -293,18 +293,18 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="contact">
-            <h2>Let’s Grow Together</h2>
-            <form class="contact-form" action="mailto:azeezhamzat@yahoo.com" method="post" enctype="text/plain">
-                <label for="name">Your Name:</label>
-                <input type="text" id="name" placeholder="Your Name" required>
-                <label for="email">Your Email:</label>
-                <input type="email" id="email" placeholder="Your Email" required>
-                <label for="message">Your Message:</label>
-                <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
-                <button type="submit" class="btn" id="send-seed">Send a Seed <i class="fas fa-paper-plane"></i></button>
-            </form>
-        </section>
+    <section id="contact" class="contact">
+        <h2>Let’s Grow Together</h2>
+        <form class="contact-form" id="contact-form" action="javascript:void(0);" method="post">
+            <label for="name">Your Name:</label>
+            <input type="text" id="name" placeholder="Your Name" required>
+            <label for="email">Your Email:</label>
+            <input type="email" id="email" placeholder="Your Email" required>
+            <label for="message">Your Message:</label>
+            <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit" class="btn" id="send-seed">Send a Seed <i class="fas fa-paper-plane"></i></button>
+        </form>
+    </section>
     </main>
 
     <!-- Footer -->
