--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
             <p class="section-subtitle">Discover my contributions to Collective Intelligence and sustainability research</p>
             <div class="publications-grid">
                 <div class="publication-card">
-                    <h3>A Community Knowledge-Based Assessment of Smallholder Farmers' Perception of Cluster Farming</h3>
-                    <p>Published in 2023. Explores how CI can enhance sustainable farming in Nigeria.</p>
+                    <h4>A Community Knowledge-Based Assessment of Smallholder Farmers' Perception of Cluster Farming</h4>
+                    <p>Preprint published in 2023. Explores how Collective Intelligence can enhance sustainable farming practices in Nigeria.</p>
                     <a href="https://www.researchgate.net/publication/368824459_A_Community_Knowledge-Based_Assessment_of_Smallholder_Farmers'_Perception_of_Cluster_Farming_and_its_Potential_Role_in_Sustainable_Accessibility_to_Farmer-Centric_Support_in_Nigeria" target="_blank" class="btn">Read Paper <i class="fas fa-file-pdf"></i></a>
                 </div>
                 <div class="publication-card">
-                    <h3>Leveraging Collective Intelligence for Sustainable Farming</h3>
-                    <p>Published in 2023 in <em>Journal of CI Studies</em>. Examines CI applications in agroecology.</p>
-                    <a href="#" target="_blank" class="btn">Read Paper <i class="fas fa-file-pdf"></i></a>
+                    <h4>Current Research</h4>
+                    <p>Ongoing work investigating Collective Intelligence frameworks across diverse domains, including sustainability initiatives, organizational design, and complex adaptive systems. My research explores how networked knowledge structures can drive innovation and resilience in socio-technical systems.</p>
+                    <a href="#" class="btn disabled">Coming Soon <i class="fas fa-hourglass-half"></i></a>
                 </div>
             </div>
         </section>
