--- a/forget_the_lone_genius.html
+++ b/forget_the_lone_genius.html
@@ -164,9 +164,9 @@
                     <ul class="related-posts">
                         <li><a href="invisible-hand.html">The Invisible Hand in the Room</a></li>
                         <li><a href="mirror-effect.html">The Mirror Effect</a></li>
-                        <li><a href="#mind_traps.html">Mind Traps</a></li>
-                        <li><a href="#speaking_to_be_heard.html">Speaking to Be Heard</a></li>
-                        <li><a href="#Building_Inclusive_Decision_Engines.html">Building Inclusive Decision Engines</a></li>
+                        <!-- <li><a href="#mind_traps.html">Mind Traps</a></li> -->
+                        <!-- <li><a href="#speaking_to_be_heard.html">Speaking to Be Heard</a></li> -->
+                        <!-- <li><a href="#Building_Inclusive_Decision_Engines.html">Building Inclusive Decision Engines</a></li> -->
                     </ul>
                 </div>
                 <div class="sidebar-widget">
