--- a/invisible-hand.html
+++ b/invisible-hand.html
@@ -108,18 +108,19 @@
                         <figure class="svg-container">
                             <img src="images/bias-ecosystem.svg" alt="Collective Genius Network Diagram" class="blog-post-image">
                             <figcaption>The Bias Ecosystem: A visual representation of how biases filter diverse perspectives in decision-making.</figcaption>
-                        </figure>
+                        </figure> 
+                        <br>
 
-                            <h3>Breaking the Pattern: What Actually Works</h3>
+                            <h3>Breaking the Pattern</h3>
                             <h4>The Anonymous Revolution: Ideas Without Names</h4>
-                            <p>Imagine evaluating ideas without knowing who proposed them. No titles, no hierarchy—just the merits of the thinking itself.</p>
+                            <p>Imagine evaluating ideas without knowing who proposed them. No titles, no hierarchy; just the merits of the thinking itself.</p>
                             <p>Digital tools make this surprisingly easy:</p>
                             <ul>
                                 <li>Use platforms like Mentimeter or PollEverywhere before meetings.</li>
                                 <li>Collect written responses to prompts without attribution.</li>
                                 <li>Conduct preliminary voting before revealing authorship.</li>
                             </ul>
-                            <p>One tech company implemented “blind brainstorming” for product features and saw contributions from their engineering team increase dramatically—with women engineers’ ideas being selected at the same rate as their male colleagues’ for the first time.</p>
+                            <p>One tech company implemented <em><a href="https://dtpennington.com/method-blind-brainstorming/" target="_blank"> “blind brainstorming” </em></a> for product features and saw contributions from their engineering team increase dramatically—with women engineers’ ideas being selected at the same rate as their male colleagues’ for the first time.</p>
                             <p>Next time you’re facing an important decision, try sending a simple anonymous Google Form asking for ideas and concerns before discussing as a group. You might be surprised by what emerges when people feel truly free to speak.</p>
 
                             <h4>Structured Turn-Taking: Ensuring Every Voice Matters</h4>
@@ -130,21 +131,21 @@
                                 <li>Others implement a rule where facilitators explicitly invite input from those who haven’t spoken recently.</li>
                                 <li>Some use progressive facilitation techniques that prioritize voices from those less frequently heard.</li>
                             </ul>
-                            <p>A healthcare organization implemented a simple token system in executive meetings—each person received a limited number of “speaking tokens” per meeting. The CEO, previously dominating discussions, now had to choose his moments carefully. The result? Decision quality improved, and meetings actually finished early.</p>
+                            <p>A healthcare organization implemented a simple token system in executive meetings—each person received a limited number of <em>“speaking tokens” </em> per meeting. The CEO, previously dominating discussions, now had to choose his moments carefully. The result? Decision quality improved, and meetings actually finished early.</p>
                             <p>Consider trying this at your next team gathering: begin with a full round where everyone speaks briefly on the topic at hand—no interruptions allowed. You’ll be amazed at the insights that emerge from your quieter colleagues.</p>
 
-                            <h4>The Power of Pause: Silence as an Inclusion Tool</h4>
+                            <h4>Silence as an Inclusion Tool</h4>
                             <p>Perhaps counterintuitively, one of the most effective tools for inclusion is structured silence.</p>
                             <p>Building thoughtful pauses into your process:</p>
                             <ul>
-                                <li>Distributes “thinking time” more equitably (not everyone processes at the same speed).</li>
+                                <li>Distributes <em>“thinking time”</em> more equitably (not everyone processes at the same speed).</li>
                                 <li>Reduces conformity pressure by allowing people to form independent opinions.</li>
                                 <li>Creates space for more introverted team members to contribute.</li>
                             </ul>
-                            <p>A financial services team implemented “silent starts” to their meetings—a few minutes of individual writing on key questions before any discussion. They found that ideas from women and people of color increased substantially in these sessions compared to traditional formats.</p>
+                            <p>A financial services team implemented <em> “silent starts” </em> to their meetings—a few minutes of individual writing on key questions before any discussion. They found that ideas from women and people of color increased substantially in these sessions compared to traditional formats.</p>
                             <p>Before your next big decision, consider instituting a mandatory reflection period where team members privately consider implications before finalizing. The quality of subsequent discussion might surprise you.</p>
 
-                            <h3>Real Talk: How One Company Actually Made This Work</h3>
+                            <h3>How One Company Actually Made This Work</h3>
                             <blockquote class="quote">
                                 <p>Meet Meridian Capital, a mid-sized financial firm that was facing a crisis of mediocrity. Despite recruiting diverse talent, their decisions remained stale and predictable. Post-project reviews revealed an uncomfortable pattern: the same senior voices dominated every discussion, while contributions from women, people of color, and junior staff rarely influenced outcomes.</p>
                             </blockquote>
@@ -175,7 +176,7 @@
                             </ol>
 
                             
-                            <h3>The Bottom Line: Better Decisions Are Waiting</h3>
+                            <h3>The Bottom Line</h3>
                             <p>Social dominance biases aren’t just barriers to inclusion—they’re barriers to excellence. By implementing thoughtful countermeasures, you unlock the full potential of your team’s cognitive diversity.</p>
                             <p>The best ideas in your organization might be sitting silently around your conference table right now. Isn’t it time you created the conditions for them to emerge?</p>
                             <blockquote class="quote">
@@ -207,9 +208,9 @@
                     <ul class="related-posts">
                         <li><a href="forget_the_lone_genius.html">Forget the Lone Genius</a></li>
                         <li><a href="mirror-effect.html">The Mirror Effect</a></li>
-                        <li><a href="#mind_traps.html">Mind Traps</a></li>
-                        <li><a href="#speaking_to_be_heard.html">Speaking to Be Heard</a></li>
-                        <li><a href="#Building_Inclusive_Decision_Engines.html">Building Inclusive Decision Engines</a></li>
+                        <!-- <li><a href="#mind_traps.html">Mind Traps</a></li> -->
+                        <!-- <li><a href="#speaking_to_be_heard.html">Speaking to Be Heard</a></li> -->
+                        <!-- <li><a href="#Building_Inclusive_Decision_Engines.html">Building Inclusive Decision Engines</a></li> -->
                     </ul>
                 </div>
                 <div class="sidebar-widget">
