--- a/mirror-effect.html
+++ b/mirror-effect.html
@@ -143,7 +143,7 @@
                             </ul>
                             <p>A technology company found that modifying their technical interview process to focus on blind code review rather than whiteboard demonstrations not only increased demographic diversity in hiring but also better predicted on-the-job performance.</p>
 
-                            <h3>Case Study: Transforming Product Development at Altera Medical</h3>
+                            <!-- <h3>Case Study: Transforming Product Development at Altera Medical</h3>
                             <blockquote class="quote">
                                 <p>Altera Medical, a mid-sized medical device manufacturer, struggled with product-market fit in diverse patient populations. Analysis revealed a troubling pattern—their product development teams consisted primarily of individuals with similar demographic and educational backgrounds.</p>
                             </blockquote>
@@ -155,7 +155,7 @@
                                 <li><strong>Structural Representation:</strong> Decision-making committees were reconfigured to include clinical specialists, patient advocates, and team members with diverse backgrounds.</li>
                                 <li><strong>Outcome Measurement:</strong> The company tracked both team composition and product success metrics against patient demographics.</li>
                             </ol>
-                            <p>Results transformed both their process and outcomes. Products developed under the new system showed significantly higher adoption rates among previously underserved patient groups. Customer satisfaction metrics improved across all demographics. Most tellingly, the innovation pipeline expanded with concepts addressing previously unrecognized medical needs.</p>
+                            <p>Results transformed both their process and outcomes. Products developed under the new system showed significantly higher adoption rates among previously underserved patient groups. Customer satisfaction metrics improved across all demographics. Most tellingly, the innovation pipeline expanded with concepts addressing previously unrecognized medical needs.</p> -->
 
                             <h3>Implementation Framework</h3>
                             <p>Organizations seeking to address identity and affinity biases can implement this evidence-based framework:</p>
