--- a/dear_me.html
+++ b/dear_me.html
@@ -245,7 +245,7 @@
                 </div>
                 <div class="sidebar-widget">
                     <h3>About the Author</h3>
-                    <p>Azeez Hamzat is an Outreach Officer at UM6P's Africa Initiative with expertise in Collective Intelligence. With a background in Crop and Environmental Protection, he bridges educational connections across Africa while exploring personal growth through cross-cultural experiences.</p>
+                    <p>Azeez Hamzat is a passionate advocate for sustainable living, with expertise in collective intelligence and environmental research.</p>
                 </div>
             </aside>
         </div>
