--- a/are_you_a_traveller.html
+++ b/are_you_a_traveller.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class="sidebar-widget">
                     <h3>About the Author</h3>
-                    <p>Azeez Hamzat is an Outreach Officer at UM6P's Africa Initiative with expertise in Collective Intelligence. Through his writing, he explores the intersection of systems thinking, cultural adaptation, and intentional approaches to navigating change.</p>
+                    <p>Azeez Hamzat is a passionate advocate for sustainable living, with expertise in collective intelligence and environmental research.</p>
                 </div>
             </aside>
         </div>
