--- a/blog.html
+++ b/blog.html
@@ -936,7 +936,7 @@
         <section class="blog-hero">
             <div class="blog-hero-content">
                 <h1>Insights & Ideas</h1>
-                <p class="blog-hero-subtitle">Exploring Collective Intelligence, Sustainability, and Africa's Future</p>
+                <p class="blog-hero-subtitle">Exploring Collective Intelligence, Sustainability, and Collaborative Future</p>
             </div>
         </section>
 
