--- a/blog.html
+++ b/blog.html
@@ -1004,7 +1004,7 @@
             // Enhanced blog posts data
             const blogPosts = [
                 {
-                    "image": "images/traveller-migrant.jpg",
+                    "image": "images/traveller.png",
                     "date": "November 09, 2024",
                     "author": "Azeez Hamzat",
                     "title": "Are You a Traveller or a Migrant?",
@@ -1015,7 +1015,7 @@
                     "featured": false
                 },
                 {
-                    "image": "images/collective-intelligence-diagram.svg",
+                    "image": "images/symphony.png",
                     "date": "January 05, 2025",
                     "author": "Azeez Hamzat",
                     "title": "Forget the Lone Genius",
@@ -1026,7 +1026,7 @@
                     "featured": false
                 },
                 {
-                    "image": "images/bias-ecosystem.svg",
+                    "image": "images/invisible hand.png",
                     "date": "February 01, 2025",
                     "author": "Azeez Hamzat",
                     "title": "The Invisible Hand in the Room",
@@ -1037,18 +1037,18 @@
                     "featured": false
                 },
                 {
-                    "image": "images/the_mirror_effect.svg",
+                    "image": "images/MEF.png",
                     "date": "February 15, 2025",
                     "author": "Azeez Hamzat",
                     "title": "The Mirror Effect",
-                    "excerpt": "While our previous article examined how social dominance biases affect whose voice carries weight in meetings, this exploration goes deeper—into the unconscious preferences that determine whose ideas we value before they even speak.",
+                    "excerpt": "True inclusion requires moving beyond demographic representation to ensure that diverse perspectives genuinely influence decisions.",
                     "link": "mirror-effect.html",
                     "tags": ["Diversity", "EvidenceBasedManagement", "GroupDynamics", "Research", "OrganizationalChange", "Systems"],
                     "readTime": "9 min read",
                     "featured": false
                 },
                 {
-                    "image": "images/dear_me.jpg",
+                    "image": "images/Journey Through Time and Sky.png",
                     "date": "March 23, 2025",
                     "author": "Azeez Hamzat",
                     "title": "Dear Me; عزيزي أنا",
