--- a/blog.html
+++ b/blog.html
@@ -1004,16 +1004,38 @@
             // Enhanced blog posts data
             const blogPosts = [
                 {
-                    "image": "images/traveller.png",
-                    "date": "November 09, 2024",
-                    "author": "Azeez Hamzat",
-                    "title": "Are You a Traveller or a Migrant?",
-                    "excerpt": "Life unfolds in unexpected chapters. In our constantly shifting world, two distinct approaches emerge: the migrant and the traveller. One moves reactively, pushed by external pressures; the other moves by choice, guided by curiosity and intention.",
-                    "link": "are_you_a_traveller.html",
-                    "tags": ["Systems", "Futures", "Resilience", "ChangeManagement", "IntentionalLiving", "CollectiveIntelligence"],
-                    "readTime": "8 min read",
-                    "featured": false
-                },
+                "image": "images/health.jpg",
+                "date": "July 05, 2025",
+                "author": "Azeez Hamzat",
+                "title": "Rethinking Africa's Health Systems for Sustainable Resilience",
+                "excerpt": "Africa’s health systems remain fragile—underfunded, understaffed, and dependent on imports. This essay outlines how universities can lead a long-overdue transformation toward resilience.",
+                "link": "rethinking-africa's-health-systems.html",
+                "tags": ["Africa", "Health Systems", "Futures Literacy", "University Impact"],
+                "readTime": "20 min read",
+                "featured": true
+            },
+            {
+                "image": "images/traveller.png",
+                "date": "June 07, 2025",
+                "author": "Azeez Hamzat",
+                "title": "When the Map Fails",
+                "excerpt": "What happens when the systems we rely on stop working? This post explores structural weaknesses in Africa’s healthcare and how academic foresight can help rebuild trust and resilience.",
+                "link": "when_the_map_fails.html",
+                "tags": ["Health Systems", "Policy Reform", "Resilience", "Futures Literacy"],
+                "readTime": "15 min read",
+                "featured": false
+            },
+            {
+                "image": "images/traveller.png",
+                "date": "November 09, 2024",
+                "author": "Azeez Hamzat",
+                "title": "Are You a Traveller or a Migrant?",
+                "excerpt": "In an unpredictable world, some move with purpose, others with pressure. This reflection explores how orientation toward uncertainty shapes our experience of change and growth.",
+                "link": "are_you_a_traveller.html",
+                "tags": ["Change", "Systems Thinking", "Resilience", "Intentional Living"],
+                "readTime": "8 min read",
+                "featured": false
+            },
                 {
                     "image": "images/symphony.png",
                     "date": "January 05, 2025",
@@ -1056,7 +1078,7 @@
                     "link": "dear_me.html",
                     "tags": ["Futures", "PersonalGrowth", "Reflection", "Identity", "Journey", "CrossCultural", "Resilience"],
                     "readTime": "7 min read",
-                    "featured": true
+                    "featured": false
                 }
             ];
 
